modified css file directories

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,8 +1,7 @@
 <footer class="footer tc">
-  <small>
+    <small>
     &copy; 2016 {{site.owner.name}}
     <br>
-    Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://alexanderussell.org/progress-for-jekyll/">Progress Theme</a>.
+    Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://alexanderussell.org/jennybeblog.github.io/">Progress Theme</a>.
   </small>
 </footer>
-
