--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -2,6 +2,6 @@
     <small>
     &copy; 2016 {{site.owner.name}}
     <br>
-    Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://alexanderussell.org/jennybeblog.github.io/">Progress Theme</a>.
+    Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://alexanderussell.org/progress-for-jekyll/">Progress Theme</a>.
   </small>
 </footer>
