--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -38,9 +38,9 @@ body {
         margin: 0.3em 0;
         font-size: 2.25em;
         line-height: 1.2em;
-        font-weight: 600;
+        font-weight: 400;
         a {
-            color: $base-color;
+            color: $oc-blue-7;
             &:hover,
             &:focus {
                 text-decoration: none;
@@ -69,7 +69,7 @@ body {
 }
 
 .header-small {
-    text-align: left;
+    text-align: center;
     margin-bottom: .75rem;
     font-size: .75rem;
     font-weight: 600;
