--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -18,7 +18,7 @@ body {
 
 .content-container {
     max-width: 48rem;
-    padding: 5rem 1rem;
+    padding: 4rem 1rem;
     margin-left: auto;
     margin-right: auto;
     @media (max-width: 48rem) {
@@ -34,6 +34,8 @@ body {
 .header {
     padding: 2%;
     margin-bottom: 1.5em;
+    text-align: center;
+    // position: fixed;
     &-title {
         margin: 0.3em 0;
         font-size: 2.25em;
@@ -44,7 +46,7 @@ body {
             &:hover,
             &:focus {
                 text-decoration: none;
-                color: $oc-gray-7;
+                color: $oc-gray-3;
             }
         }
         span {
@@ -53,7 +55,7 @@ body {
     }
     &-nav {
         a {
-            color: $oc-blue-7;
+            color: $oc-gray-7;
             text-transform: lowercase;
             -webkit-transition: all .2s ease;
             -moz-transition: all .2s ease;
@@ -69,15 +71,16 @@ body {
 }
 
 .header-small {
-    text-align: center;
+    text-align: left;
     margin-bottom: .75rem;
-    font-size: .75rem;
+    font-size: .9rem;
     font-weight: 600;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     a {
-        color: $base-color;
+        color: $oc-indigo-4;
         &:hover,
         &:focus {
+            color: $oc-gray-3;
             text-decoration: none;
         }
     }
@@ -109,11 +112,11 @@ body {
         margin-bottom: 0.3rem;
         font-size: 2.25em;
         line-height: 1.2em;
-        font-weight: 600;
+        font-weight: 500;
     }
     &-date {
-        margin-bottom: .5rem;
-        color: $oc-gray-8;
+        margin-bottom: .6rem;
+        color: $oc-gray-5;
         font-size: .75rem;
         text-transform: uppercase;
     }
@@ -125,8 +128,8 @@ body {
             }
             li {
                 margin: 0;
-                font-size: .75rem;
-                font-weight: 300;
+                font-size: .8rem;
+                font-weight: 400;
                 display: inline;
                 list-style-type: none;
                 text-transform: lowercase;
@@ -135,16 +138,16 @@ body {
                     margin: 4px;
                     margin-left: 0px;
                     color: $oc-white;
-                    background-color: $oc-gray-6;
+                    background-color: $oc-indigo-3;
                     text-decoration: none;
                     border-radius: 3px;
                     span {
                         float: left;
-                        padding: .5px 5px;
+                        padding: .5px 4px 4px
                     }
                 }
                 a:hover {
-                    background-color: $oc-gray-7;
+                    background-color: $oc-indigo-7;
                 }
                 a:visited {
                     background-color: $oc-white;
@@ -164,6 +167,7 @@ body {
 
 .list {
     &-post {
+        padding-top: 10em;
         padding: 4% 2%;
         &:hover {
             background-color: $background-over-color;
@@ -183,7 +187,7 @@ body {
             font-weight: 600;
         }
         &-date {
-            color: $base-lighten-color;
+            color: $oc-indigo-4;
             font-size: .8rem;
             text-transform: uppercase;
         }
@@ -248,7 +252,7 @@ body {
                     color: $oc-white;
                     background-color: $oc-gray-6;
                     text-decoration: none;
-                    border-radius: 3px;
+                    border-radius: 2px;
                     span {
                         float: left;
                         padding: .5px 5px;
@@ -333,6 +337,11 @@ body {
         a {
             color: $base-color;
             margin: 4px;
+            &:hover,
+            &:focus {
+                color: $oc-indigo-4;
+                text-decoration: none;
+            }
         }
     }
 }
