--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -176,12 +176,16 @@ body {
             background-color: $background-over-color;
             border-color: transparent;
             border-radius: 10px;
+            -webkit-transition: all .2s ease;
+            -moz-transition: all .2s ease;
+            transition: all .2s ease;
         }
         a {
-            color: $oc-indigo-6;
+            color: $base-color;
             &:hover,
             &:focus {
                 text-decoration: none;
+                color: $oc-indigo-6;
             }
         }
         &-title {
